Add linkpost to handlebars

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -5,9 +5,9 @@
 
 {{!-- This is the post loop - each post will be output using this markup --}}
 {{#foreach posts}}
-<article class="{{post_class}}">
+<article class="{{post_class}} {{#link}}link-post{{/link}}">
     <header class="post-header">
-        <h2 class="post-title"><a href="{{url}}">{{title}}</a></h2>
+        <h2 class="post-title"><a href="{{#link}}{{theLink}}{{else}}{{url}}{{/link}}">{{title}}</a></h2>
     </header>
     <section class="post-excerpt">
         <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
